--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>Buscador de Endereço
                 </h1>
                 <input type="text" name="input" id="input" placeholder="Digite um CEP...">
-                    <button>Buscar</button>
+                    <button onclick="buscar()">Buscar</button>
                     <p>Preencha o campo acima!</p>
             </div>
             
