ultimo commit da mediaquery(eu acho kkkk)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="content">
                 <h1>Buscador de Endereço
                 </h1>
-                <input type="text" name="input" id="input" placeholder="Digite um CEP...">
+                <input type="text" name="input" id="input" placeholder="Digite um CEP..." autocomplete="off">
                     <button onclick="buscar()">Buscar</button>
                     <p>Preencha o campo acima!</p>
             </div>
