--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </h1>
                 <input type="text" name="input" id="input" placeholder="Digite um CEP..." autocomplete="off">
                     <button onclick="buscar()">Buscar</button>
-                    <p>Preencha o campo acima!</p>
+                    <p id="area">Preencha o campo acima!</p>
             </div>
             
         </div>
